--- a/.gitignore
+++ b/.gitignore
@@ -117,5 +117,7 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/pycharm
 
 # 개인 파일
-data
-Loss Function/*.pdf
+Deep Learning/Introduction to PyTorch/data
+Deep Learning/Loss Function/*.pdf
+Machine Learning/data
+Machine Learning/*.csv
